<package format="2">
  <name>mypackage</name>
  <version>0.0.1</version>
  <description>
  My first Ros package.
  </description>
  <maintainer email="mohamd-amine-mrhili@hotmail.com">PR-foobar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>